# ros-plan

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  pyproject.toml
launch2dump/: pyproject.toml
launch2dump/src/launch2dump/: __main__.py  event_handlers.py  inspector.py  loader.py  serialization.py  utils.py
launch2dump/src/launch2dump/convert/: plan.py
launch2dump/src/launch2dump/dump/: __init__.py  declare_launch_argument.py  group_action.py  include_launch_description.py  launch_description.py  node.py  substitution.py
launch2dump/src/launch2dump/visitor/: action.py  composable_node_container.py  entity.py  execute_local.py  include_launch_description.py  lifecycle_node.py  load_composable_nodes.py  node.py  session.py  substitution_tracker.py
launch2dump/src/ros_cmdline/: cmdline.py
launch2dump/tests/: __init__.py  test_cli.py  test_loader.py
launch2dump/tests/fixtures/: composable_nodes.launch.py  included_base.launch.py  simple_talker.launch.py  with_conditionals.launch.py  with_path_substitution.launch.py
launch2plan/: README.md  pyproject.toml
launch2plan/fixtures/: one_node.launch.xml
launch2plan/src/launch2plan/: __init__.py  __main__.py  event_handlers.py  inspector.py  utils.py
launch2plan/src/launch2plan/dump/: composable_node.py  declare_launch_argument.py  entity.py  group_action.py  include_launch_description.py  launch_description.py  node.py  parameter.py  set_launch_configuration.py  set_use_sim_time.py  substitution.py
launch2plan/src/ros_cmdline/: __init__.py
python/launch2plan/: README.md  pyproject.toml
python/launch2plan/tests/: test_arg_inference.py  test_builder.py  test_cli.py  test_conditionals.py  test_converter.py  test_file_registry.py  test_includes.py  test_inference.py  test_integration.py  test_introspection.py  test_metadata.py  test_package_detector.py  test_progress.py  test_reporting.py  test_visitor.py  test_writer.py
python/ros2-introspect/: README.md  pyproject.toml  ros2-introspect.sh
python/ros2-introspect/tests/: test_dependency_check.py  test_introspector.py
ros-plan-compiler/: Cargo.toml
ros-plan-compiler/src/: compiler.rs  context.rs  error.rs  eval.rs  launch_loader.rs  lib.rs  processor.rs  program.rs  qos_validator.rs  scope.rs  selector.rs  utils.rs
ros-plan-compiler/src/context/: arg.rs  expr.rs  link.rs  node.rs  node_socket.rs  plan_socket.rs
ros-plan-compiler/src/eval/: eval_.rs  eval_store.rs  lua.rs
ros-plan-compiler/src/processor/: evaluator.rs  launch_integration.rs  link_resolver.rs  plan_visitor.rs  program_builder.rs  shared_ref_initializer.rs  socket_resolver.rs
ros-plan-compiler/src/scope/: entity_enum.rs  group.rs  include.rs  plan_file.rs  scope_enum.rs  traits.rs
ros-plan-compiler/src/selector/: absolute_selector.rs  relative_selector.rs  selector_.rs
ros-plan-compiler/src/utils/: arc_rwlock.rs  shared_table.rs
ros-plan-compiler/tests/: empty_link_tests.rs  encapsulation_tests.rs  launch_advanced_integration_test.rs  launch_integration_test.rs  qos_validation_tests.rs
ros-plan-compiler/tests/fixtures/: consume_only_link.yaml  link_multi_source_valid.yaml  nested_namespace_topic.yaml  plan_socket_with_topic.yaml  relative_topic.yaml  transparent_multi_level.yaml  transparent_nested_subplan.yaml  transparent_single_level.yaml  type_unspecified_compatible.yaml
ros-plan-compiler/tests/launch_files/: conditional_include.yaml  multi_node.launch.py  name_conflict.yaml  param_substitution.yaml  plan_with_link_to_launch.yaml  simple_node.launch.py  test_plan_with_launch.yaml  with_namespace.yaml
ros-plan-format/: Cargo.toml  example.toml  sensor.toml
ros-plan-format/src/: argument.rs  error.rs  eval.rs  expr.rs  ident.rs  key.rs  lib.rs  link.rs  node.rs  node_socket.rs  parameter.rs  params_file.rs  plan.rs  plan_socket.rs  qos.rs  qos_requirement.rs  ros_type.rs  socket.rs  subplan.rs
ros-plan-format/src/expr/: binary.rs  bool_expr.rs  expr_.rs  expr_type.rs  key_or_expr.rs  path_or_expr.rs  text_or_expr.rs  value.rs  value_or_expr.rs  value_type.rs
ros-plan-format/src/key/: key_owned.rs  key_type.rs  non_private_key.rs
ros-plan-parse/: Cargo.toml  lib.lua
ros-plan-parse/src/: config_serializer.rs  context.rs  error.rs  eval.rs  lib.rs  link_resolver.rs  plan_visitor.rs  processor.rs  program.rs  resource.rs  scope.rs  socket_resolver.rs  tree.rs  utils.rs
ros-plan-parse/src/context/: arg.rs  expr.rs  link.rs  node.rs  node_socket.rs  plan_socket.rs  socket.rs  uri.rs
ros-plan-parse/src/processor/: evaluator.rs  link_resolver.rs  plan_visitor.rs  shared_ref_initializer.rs  socket_resolver.rs
ros-plan-parse/src/resource/: v1.rs  v2.rs  v3.rs
ros-plan-parse/src/scope/: entity_enum.rs  group.rs  plan_file.rs  selector.rs  traits.rs
ros-plan-parse/src/utils/: arc_rwlock.rs  shared_table.rs  tree.rs
ros2/rmw_introspect_cpp/: CMakeLists.txt  README.md  package.xml
ros2/rmw_introspect_cpp/src/: data.cpp  rmw_allocation.cpp  rmw_callbacks.cpp  rmw_client.cpp  rmw_event.cpp  rmw_features.cpp  rmw_gid.cpp  rmw_graph.cpp  rmw_info.cpp  rmw_init.cpp  rmw_logging.cpp  rmw_network_flow.cpp  rmw_node.cpp  rmw_publisher.cpp  rmw_qos_compat.cpp  rmw_serialize.cpp  rmw_service.cpp  rmw_subscription.cpp  rmw_utils.cpp  rmw_wait.cpp  type_support.cpp
ros2/rmw_introspect_cpp/test/: benchmark_performance.sh  test_data.cpp  test_e2e_listener.sh  test_e2e_node.sh  test_e2e_suite.sh  test_e2e_talker.sh  test_init.cpp  test_phase1.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4_stubs.cpp  validate_json.py
ros2plan/: Cargo.toml
ros2plan/src/: cli.rs  config.rs  main.rs
rust/ros-plan-compiler/: Cargo.toml
rust/ros-plan-compiler/src/: compiler.rs  context.rs  error.rs  launch_loader.rs  selector.rs
rust/ros-plan-compiler/tests/: multi_source_validation.rs  topic_path_tests.rs  type_checking_tests.rs
rust/ros-plan-runtime/: Cargo.toml
rust/ros-plan-runtime/src/: config.rs  events.rs  lib.rs  process_manager.rs
rust/ros-plan-runtime/tests/: state_tests.rs
rust/ros-utils/: Cargo.toml
rust/ros-utils/src/: error.rs  node_cmdline.rs
(+194 files in other folders)
