[workspace]
resolver = "2"
members = [
  "ros-plan-format",
  "ros-plan-compiler",
  "ros2plan",
  "dump2plan",
  "ros-utils",
]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
indexmap = { version = "2.7.0", features = ["serde"] }
mlua = { version = "0.10.2", features = ["luau"] }
