[workspace]
resolver = "2"
members = [
  "rust/ros-plan-format",
  "rust/ros-plan-compiler",
  "rust/ros-plan-runtime",
  "ros2/ros2plan",
  "rust/ros-utils",
]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
indexmap = { version = "2.7.0", features = ["serde"] }
mlua = { version = "0.10.2", features = ["luau"] }

[profile.release-with-debug]
inherits = "release"
debug = true
