[project]
name = "ros_plan"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aeon", email = "jerry73204@gmail.com" }
]
dependencies = [
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.workspace]
members = ["launch2dump"]
