[project]
name = "launch2dump"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aeon", email = "jerry73204@gmail.com" }
]
dependencies = [
    "ruamel-yaml>=0.18.6",
    "lark>=1.2.2",
    "packaging>=24.1",
]
readme = "README.md"
requires-python = "==3.10.*"

[project.scripts]
launch2dump = "launch2dump.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/launch2dump",
    "src/ros_cmdline",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Error, pyflakes, warnings, isort
