[package]
name = "ros-plan-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
by_address = "1.2.1"
indexmap = { version = "2.7.0", features = ["serde"] }
itertools = "0.13.0"
mlua.workspace = true
parking_lot = "0.12.3"
ros-plan-format = { version = "0.1.0", path = "../ros-plan-format" }
serde.workspace = true
serde_yaml = "0.9.34"
stable-vec = "0.4.1"
thiserror.workspace = true
toml = { version = "0.8.19", features = ["indexmap"] }
