[package]
name = "ros-plan-format"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
indexmap = { version = "2.7.0", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"
toml = { version = "0.8.19", features = ["indexmap"] }
