[package]
name = "ros-plan-format"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
strum = { version = "0.26.3", features = ["derive"] }
thiserror.workspace = true
toml = { version = "0.8.19", features = ["indexmap"] }
serde.workspace = true
indexmap.workspace = true
itertools = "0.14.0"
serde_yaml = "0.9.34"
pomsky-macro = "0.11.0"
regex = "1.11.1"

[dev-dependencies]
eyre = "0.6.12"
