[package]
name = "ros-plan-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
by_address = "1.2.1"
indexmap = "2.7.0"
itertools = "0.13.0"
mlua = { version = "0.10.2", features = ["luau"] }
parking_lot = "0.12.3"
ros-plan-format = { version = "0.1.0", path = "../ros-plan-format" }
serde.workspace = true
stable-vec = "0.4.1"
thiserror.workspace = true
toml = { version = "0.8.19", features = ["indexmap"] }
