[package]
name = "ros2plan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
eyre = "0.6.12"
indexmap.workspace = true
ros-plan-format = { version = "0.1.0", path = "../ros-plan-format" }
ros-plan-compiler = { version = "0.1.0", path = "../ros-plan-compiler" }
serde.workspace = true
serde_yaml = "0.9.34"
toml = "0.8.19"

[dev-dependencies]
eyre = "0.6.12"
