[project]
name = "launch2plan"
version = "0.1.0"
description = "Convert ROS 2 launch files to ROS-Plan format"
authors = [
    { name = "aeon", email = "jerry73204@gmail.com" }
]
dependencies = [
    "ros2-introspect",
    "ruamel-yaml>=0.18.6",
    "pyyaml>=6.0",
    "lark>=1.1.0",
]
readme = "README.md"
requires-python = "==3.10.*"

[project.scripts]
launch2plan = "launch2plan.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/launch2plan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Error, pyflakes, warnings, isort
