<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_introspect_cpp</name>
  <version>0.1.0</version>
  <description>RMW implementation for lightweight node interface introspection</description>
  <maintainer email="jerry73204@gmail.com">aeon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rmw_dds_common</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rmw_typesupport implementation_type="rmw_introspect_cpp"/>
  </export>
</package>
