[package]
name = "ros-plan-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
ros-plan-compiler = { path = "../ros-plan-compiler" }
ros-plan-format = { path = "../ros-plan-format" }
ros-utils = { path = "../ros-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
eyre = "0.6"
thiserror = "1.0"
ctrlc = "3.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
